crates/wac-parser/tests/resolution/fail/target-export-mismatch.wac
package test:comp targets test:comp/world;

world %world {
    import foo: interface {
        foo: func(x: u32);
    };
    export foo: interface {
        foo: func(x: string);
    };
}

import foo: interface {
    foo: func(x: u32);
};
export foo;
